--- a/themes/greatermedia/assets/css/sass/components/_gallery.scss
+++ b/themes/greatermedia/assets/css/sass/components/_gallery.scss
@@ -238,6 +238,7 @@ category: Components - Gallery Archive
 	@include transform(translate(-50%, -50%));
 	background-repeat: no-repeat;
 	background-position: center center;
+	background-size: cover;
 	@include bp(small) {
 		height: 320px;
 	}
